Added API Key auth and same origin auth
