# server/config.js
@@ -12,21 +12,7 @@ module.exports = {
   buildTag: env.BUILD_TAG,
   port: env.PORT || '3000',
   auth: {
-    user: env.BASIC_AUTH_USER,
-    pass: env.BASIC_AUTH_PASS
-  }
-};
-
-module.exports = {
-  name: pkg.name,
-  version: pkg.version,
-  dev: dev,
-  buildDate: env.BUILD_DATE,
-  commitId: env.COMMIT_ID,
-  buildTag: env.BUILD_TAG,
-  port: env.PORT || '3000',
-  auth: {
-    user: env.BASIC_AUTH_USER,
-    pass: env.BASIC_AUTH_PASS
+    host: env.AUTH_HOST,
+    keys: env.AUTH_KEYS
   }
 };
